Prod-EU/force-app/main/default/objects/Audit_Tracker__c/Audit_Tracker__c.object-meta.xml
<CustomObject>
    <label>Audit Tracker</label>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Audit Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>