Prod-EU/force-app/main/default/objects/Audit_Tracker__c/fields/Audit_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Audit_Field_Name__c</fullName>
    <description>This picklist will store name of field that needs to be audited</description>
    <label>Audit Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Prescription</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Documents Previous Order</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>