Prod-EU/force-app/main/default/objects/Audit_Tracker__c/fields/Field_Verified__c.field-meta.xml
<CustomField>
    <fullName>Field_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Verified</label>
    <type>Checkbox</type>
</CustomField>