Prod-EU/force-app/main/default/objects/Audit_Tracker__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Id</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Audit Trackers</relationshipLabel>
    <relationshipName>Audit_Order</relationshipName>
    <type>Lookup</type>
</CustomField>